# live-transcript

./: .gitignore  CLAUDE.md  config.yaml  config_cuda.yaml  hotwords.txt  install-cuda.sh  modelscope-download.sh  pyproject.toml
client/: py_client.py  web_client.html
scripts/: benchmark.py  download_models.py
src/live_transcript/: __init__.py  __main__.py  audio_buffer.py  main.py  protocol.py  server.py
src/live_transcript/asr/: base.py  correction_engine.py  hotword_manager.py  pipeline.py  streaming_engine.py
