[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "live-transcript"
version = "0.1.0"
description = "Real-time speech recognition service with WebSocket streaming"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "sherpa-onnx>=1.12",
    "jieba>=0.42",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
benchmark = [
    "jiwer>=3.0",
    "pydub>=0.25",
]
funasr = [
    "funasr>=1.2",
    "torch>=2.0",
    "torchaudio>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
